--- a/example1/index.html
+++ b/example1/index.html
@@ -36,7 +36,7 @@
         <!-- an image -->
         <img id="myImage"
              alt="Black hole - Messier 87 crop max res"
-             src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4f/Black_hole_-_Messier_87_crop_max_res.jpg/1024px-Black_hole_-_Messier_87_crop_max_res.jpg">
+             src="https://www.nasa.gov/sites/default/files/cygx1_ill.jpg">
 
         <!-- a caption -->
         <p id="caption">
