--- a/example1/index.html
+++ b/example1/index.html
@@ -13,6 +13,7 @@
             /* uncomment to change default font */
              html {
                 font-family: sans-serif;
+                font-size: large;
             } 
 
             img {
@@ -23,6 +24,13 @@
                 display: none; /* start with caption hidden */
                 font-style: italic;
             }
+
+            .firstly {
+                height: 512px;
+                background-image: linear-gradient(rgba(69, 95, 238, 0.8),(rgba(155, 206, 73, 0.5))
+            }
+
+
         </style>
     </head>
 
@@ -42,6 +50,14 @@
         <p id="caption">
             The Event Horizon Telescope (EHT) — a planet-scale array of eight ground-based radio telescopes forged through international collaboration — was designed to capture images of a black hole. In coordinated press conferences across the globe, EHT researchers revealed that they succeeded, unveiling the first direct visual evidence of the supermassive black hole in the centre of Messier 87 and its shadow.
         </p>
+
+        <!-- marissa test -->
+        <div class="firstly">
+            <img src="/media/examples/leopard.jpg"
+                 alt="An intimidating leopard.">
+            <p>Beware of the leopard</p>
+        </div>
+        
 
         <!-- javascript -->
         <script type="application/javascript">
