--- a/example1/index.html
+++ b/example1/index.html
@@ -51,11 +51,17 @@
             The Event Horizon Telescope (EHT) — a planet-scale array of eight ground-based radio telescopes forged through international collaboration — was designed to capture images of a black hole. In coordinated press conferences across the globe, EHT researchers revealed that they succeeded, unveiling the first direct visual evidence of the supermassive black hole in the centre of Messier 87 and its shadow.
         </p>
 
+        <!-- an image -->
+        <img id="kuepafs"
+             alt="kuepafs"
+             src="IMGS/Kue Pafs Logo.jpg">
+
+        
         <!-- marissa test -->
         <div class="firstly">
-            <img src="/media/examples/leopard.jpg"
-                 alt="An intimidating leopard.">
-            <p>Beware of the leopard</p>
+            <img src="IMGS/Kue Pafs Logo.jpg"
+                 alt="kue pafs">
+            <p>kue pafs</p>
         </div>
         
 
