--- a/example1/index.html
+++ b/example1/index.html
@@ -141,15 +141,15 @@
                 gridItem.childNodes[1].classList.remove('img-darken');
             })
 
-            gridItem.addEventListener('mouseover',() => {
-                console.log(gridItem.childNodes[3].classList);
-                gridItem.childNodes[3].classList.remove('img-darken');
-            })
+            //gridItem.addEventListener('mouseover',() => {
+                //console.log(gridItem.childNodes[3].classList);
+                //gridItem.childNodes[3].classList.remove('img-darken');
+            //})
 
-            gridItem.addEventListener('mouseout',() => {
-                console.log(gridItem.childNodes[3].classList);
-                gridItem.childNodes[3].classList.add('img-darken');
-            })
+            //gridItem.addEventListener('mouseout',() => {
+                //console.log(gridItem.childNodes[3].classList);
+                //gridItem.childNodes[3].classList.add('img-darken');
+            //})
 
         
         })
