Where are my images?
the local html file on my desktop has my images but the github link doesnt

--- a/example1/index.html
+++ b/example1/index.html
@@ -27,8 +27,7 @@
                         </div>
 
                         <div class="img-text-wrapper">
-                            <div class="logo-wrapper">
-                                <img src= "imgs/idk.png">
+                            <div class="subtitle">-- google it --
                             </div>
                         </div>
                     </div>
@@ -38,8 +37,7 @@
                         </div>
 
                         <div class="img-text-wrapper">
-                            <div class="logo-wrapper">
-                                <img src= "imgs/idk.png">
+                            <div class="subtitle">-- google it --
                             </div>
                         </div>
                     </div>
@@ -49,8 +47,7 @@
                         </div>
 
                         <div class="img-text-wrapper">
-                            <div class="logo-wrapper">
-                                <img src= "imgs/idk.png">
+                            <div class="subtitle">-- google it --
                             </div>
                         </div>
                     </div>
@@ -60,8 +57,7 @@
                         </div>
 
                         <div class="img-text-wrapper">
-                            <div class="logo-wrapper">
-                                <img src= "imgs/idk.png">
+                            <div class="subtitle">-- google it --
                             </div>
                         </div>
                     </div>
@@ -71,8 +67,7 @@
                         </div>
 
                         <div class="img-text-wrapper">
-                            <div class="logo-wrapper">
-                                <img src= "imgs/idk.png">
+                            <div class="subtitle">-- google it --
                             </div>
                         </div>
                     </div>
@@ -82,8 +77,7 @@
                         </div>
 
                         <div class="img-text-wrapper">
-                            <div class="logo-wrapper">
-                                <img src= "imgs/idk.png">
+                            <div class="subtitle">-- google it -- 
                             </div>
                         </div>
                     </div>
@@ -93,8 +87,7 @@
                         </div>
 
                         <div class="img-text-wrapper">
-                            <div class="logo-wrapper">
-                                <img src= "imgs/idk.png">
+                            <div class="subtitle">-- google it --
                             </div>
                         </div>
                     </div>
@@ -104,8 +97,7 @@
                         </div>
 
                         <div class="img-text-wrapper">
-                            <div class="logo-wrapper">
-                                <img src= "imgs/idk.png">
+                            <div class="subtitle">-- google it --
                             </div>
                         </div>
                     </div>
@@ -115,11 +107,12 @@
                         </div>
 
                         <div class="img-text-wrapper">
-                            <div class="logo-wrapper">
-                                <img src= "imgs/idk.png">
+                            <div class="subtitle">-- google it --  
                             </div>
                         </div>
                     </div>
+
+
 
 
 
@@ -148,7 +141,7 @@
 
             //gridItem.addEventListener('mouseout',() => {
                 //console.log(gridItem.childNodes[3].classList);
-                //gridItem.childNodes[3].classList.add('img-darken');
+               // gridItem.childNodes[3].classList.add('img-darken');
             //})
 
         
